fix: shift session unread badge left

--- a/pages/message/index.less
+++ b/pages/message/index.less
@@ -51,14 +51,3 @@ page {
 .wrapper {
   margin-right: 16rpx;
 }
-
-.wrapper .t-badge__content {
-  display: none !important;
-}
-
-.wrapper .t-has-count {
-  position: relative !important;
-  left: auto !important;
-  top: auto !important;
-  transform: none !important;
-}
